@@ -1,3 +1,9 @@
+globus-io (10.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 24 Feb 2014 19:26:33 -0500
+
 globus-io (10.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
